Have the login stats rendering to home now i am going to try to add the UserStats to the same on the front end.